# coinbene-api

./: .gitignore  ChangeLog.md  LICENSE  README.md  coinbene-api.cabal  stack.yaml
app/: Main.hs
doc/: API-error-handling.md
src/: Coinbene.hs  Coins.hs  Lib.hs
src/Coinbene/: Core.hs  Parse.hs  Request.hs
test/: Test.hs
