cabal-version: 1.12

name:           coinbene-api
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/dimitri-xyz/coinbene-api#readme>
homepage:       https://github.com/dimitri-xyz/coinbene-api#readme
bug-reports:    https://github.com/dimitri-xyz/coinbene-api/issues
author:         Dimitri DeFigueiredo
maintainer:     github@dimitri.xyz
copyright:      2018 Coinbene Brasil
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/dimitri-xyz/coinbene-api

library
  exposed-modules:
      Coins
      Coinbene
      Coinbene.Parse
      Coinbene.Request
  other-modules:
      Paths_coinbene_api
      Coinbene.Core
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , http-conduit
    , http-client
    , http-client-tls
    , bytestring
    , http-types
    , aeson
    , scientific
    , monad-time
    , time
    , cryptonite
    , unordered-containers
    , vector
  default-language: Haskell2010

executable coinbene-api-exe
  main-is: Main.hs
  other-modules:
      Paths_coinbene_api
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , coinbene-api
    , yaml
    , http-conduit
    , http-client
    , http-client-tls
    , aeson
    , bytestring
    , async
  default-language: Haskell2010

test-suite coinbene-api-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      Paths_coinbene_api
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , coinbene-api
    , tasty
    , tasty-hunit
    , aeson
    , bytestring
    , http-client
    , http-client-tls

  default-language: Haskell2010
